# CloakBrowser

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: attest-release.yml  ci.yml  publish.yml
cloakbrowser/: browser.py  config.py  download.py
examples/: fingerprint_scan_test.py
js/: README.md  package.json
js/src/: config.ts  download.ts  playwright.ts  puppeteer.ts  types.ts
js/tests/: config.test.ts  launch.test.ts  update.test.ts
tests/: test_build_args.py  test_stealth.py  test_update.py
