[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloakbrowser"
dynamic = ["version"]
description = "Stealth Chromium that passes every bot detection test. Drop-in Playwright replacement with source-level fingerprint patches."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CloakHQ", email = "cloakhq@pm.me" },
]
keywords = [
    "stealth",
    "browser",
    "chromium",
    "playwright",
    "puppeteer",
    "scraping",
    "web-scraping",
    "anti-detect",
    "antidetect",
    "undetected",
    "bot-detection",
    "fingerprint",
    "recaptcha",
    "cloudflare",
    "turnstile",
    "datadome",
    "captcha",
    "headless",
    "automation",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.40",
    "httpx>=0.24",
]

[project.optional-dependencies]
geoip = ["geoip2>=4.0"]
patchright = ["patchright>=1.40"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/CloakHQ/CloakBrowser"
Documentation = "https://github.com/CloakHQ/CloakBrowser#readme"
Repository = "https://github.com/CloakHQ/CloakBrowser"
Issues = "https://github.com/CloakHQ/CloakBrowser/issues"

[tool.hatch.version]
path = "cloakbrowser/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests that hit live detection sites (deselect with '-m \"not slow\"')"]
